# production_agentic_system

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini.examble  makefile  pyproject.toml
docker/: .env.example  docker-compose.yml
src/config/: settings.py
src/data/: db_manager.py
src/data/alembic/: env.py
src/data/alembic/versions/: bef55be7a2e2_test.py
src/data/models/: auth.py  session.py  user.py
src/data/repositories/: __init__.py  chat_session_repository.py  user_repository.py
src/data/schemas/: __init__.py  base.py  chat_session.py  user.py
src/system/: logs.py
